<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
    <TextView
        android:id="@id/txt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/txt"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@id/txtout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/txtout"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn3"
        android:textSize="25sp"
        android:gravity="center"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2"
        android:textSize="25sp"
        android:gravity="center"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:textSize="25sp"
        android:gravity="center"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn4"
        android:textSize="25sp"
        android:gravity="center"
        android:onClick="onClick"/>
</LinearLayout>